metallb-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
